2008-04-24  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * kdeedu/marble/src/lib/TileId.cpp:
    * kdeedu/marble/src/lib/MergedLayerDecorator.h:
    * kdeedu/marble/src/lib/TileId.h:
    * kdeedu/marble/src/lib/MergedLayerDecorator.cpp:
    * kdeedu/marble/src/lib/TextureTile.cpp:
    * kdeedu/marble/src/lib/TileCache.cpp:
    * kdeedu/marble/src/lib/TextureTile.h:
    * kdeedu/marble/src/lib/TileLoader.cpp:
    * kdeedu/marble/src/lib/TileCache.h:
    * kdeedu/marble/src/lib/CMakeLists.txt:

    Add class TileId because int is not sufficient for higher zoom levels.

2008-04-23  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * kdeedu/marble/src/lib/XmlHandler.cpp:
    * kdeedu/marble/src/lib/MarbleLegendBrowser.cpp:
    * kdeedu/marble/src/lib/GpxFileViewItem.h:
    * kdeedu/marble/src/lib/ViewParams.cpp:
    * kdeedu/marble/src/lib/BoundingBox.cpp:
    * kdeedu/marble/src/lib/kml/KMLObject.cpp:
    * kdeedu/marble/src/lib/SunControlWidget.h:

    Fix include statements for Qt header: add Qt module.

2008-04-23  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * kdeedu/marble/src/lib/gps/GpxFile.cpp:
    * kdeedu/marble/src/lib/gps/Track.cpp:
    * kdeedu/marble/src/lib/gps/TrackContainer.cpp:
    * kdeedu/marble/src/lib/gps/GpsElement.h:
    * kdeedu/marble/src/lib/gps/GpxSax.cpp:
    * kdeedu/marble/src/lib/gps/GpsTracking.cpp:
    * kdeedu/marble/src/lib/gps/GpxFileModel.cpp:
    * kdeedu/marble/src/lib/gps/TrackSegment.cpp:
    * kdeedu/marble/src/lib/gps/GmlSax.cpp:
    * kdeedu/marble/src/lib/AbstractLayer/AbstractLayerContainer.cpp:
    * kdeedu/marble/src/lib/AbstractLayer/AbstractLayerData.cpp:
    * kdeedu/marble/src/lib/geodata/handlers/kml/KMLFolderTagHandler.cpp:
    * kdeedu/marble/src/lib/geodata/handlers/kml/KMLDocumentTagHandler.cpp:
    * kdeedu/marble/src/lib/geodata/handlers/dgml/DGMLTextureTagHandler.cpp:
    * kdeedu/marble/src/lib/geodata/handlers/dgml/DGMLHeadTagHandler.cpp: