@@ -1,3 +1,12 @@
+2008-04-24  Torsten Rahn  <rahn@kde.org>
+
+    * src/MarbleTest.cpp:
+
+    - Reverting patch from Jordi Polo which rather seems to
+      fix symptoms than the actual issue.
+    - Making sure Marble will always execute the test at 
+      normal MapQuality and using the SRTM map. 
+
 2008-04-24  Jens-Michael Hoffmann  <jensmh@gmx.de>
 
     * kdeedu/marble/src/lib/TileId.cpp:
